fix some swagger comments
